--- a/Client/App/Styles/xcommon-layout.scss
+++ b/Client/App/Styles/xcommon-layout.scss
@@ -2,7 +2,7 @@ $device-small: 1;
 $device-medium: 2;
 $device-large: 3;
 
-$size-small: 320px;
+$size-small: 420px;
 $size-large: 1024px;
 
 @mixin respond-to($media) {
@@ -28,7 +28,7 @@ $size-large: 1024px;
 $alignOptions: start, end, center, around, stretch, baseline;
 $justifyOptions: start, end, center, between, around;
 
-@function align-translate($option, $justify) {
+@function content-translate($option, $justify) {
 
   @if ($justify) {
     @if ($option == start) {
@@ -77,12 +77,28 @@ $justifyOptions: start, end, center, between, around;
   @return $option;
 }
 
-@mixin apply-align($size) {
+@mixin apply-content($size) {
+
+  [#{$size}="start"] {
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+
+  [#{$size}="center"] {
+    align-items: center;
+    justify-content: center;
+  }
+
+  [#{$size}="end"] {
+    align-items: flex-end;
+    justify-content: flex-end;
+  }
+
   @each $align in $alignOptions {
     @each $justify in $justifyOptions {
         [#{$size}="#{$align} #{$justify}"] {
-            align-items: align-translate($align, false);
-          	justify-content: align-translate($justify, true);
+            align-items: content-translate($align, false);
+          	justify-content: content-translate($justify, true);
         }
     }
   }
@@ -90,7 +106,7 @@ $justifyOptions: start, end, center, between, around;
 
 @mixin apply-flex($size) {
   [#{$size}] {
-    flex: 1 0 auto;  
+    flex: 100 0 auto;  
   }
   
   @for $i from 1 through 100 {  
@@ -113,18 +129,33 @@ $justifyOptions: start, end, center, between, around;
   }
 }
 
+@mixin apply-hide($size) {
+  [#{$size}] {
+    display: none;
+  }
+}
+
 @include apply-layout(layout);
 @include apply-flex(flex);
-@include apply-align(align);
+@include apply-content(content);
+@include apply-content(hide);
 
 @include respond-to($device-small) {
   @include apply-layout(layout-sm);
+  @include apply-layout(layout-md-sm);
   @include apply-flex(flex-sm);
-  @include apply-align(align-sm);
+  @include apply-content(content-sm);
+  @include apply-content(content-md-sm);
+  @include apply-hide(hide-sm);
+  @include apply-hide(hide-md-sm);
 }
 
 @include respond-to($device-medium) {
   @include apply-layout(layout-md);
+  @include apply-layout(layout-md-sm);
   @include apply-flex(flex-md);
-  @include apply-align(align-md);
+  @include apply-content(content-md);
+  @include apply-content(content-md-sm);
+  @include apply-hide(hide-md);
+  @include apply-hide(hide-md-sm);
 }
